Add Crown Quarto page size.

--- a/tex/p044.tex
+++ b/tex/p044.tex
@@ -32,7 +32,7 @@
 \vs p044 1:8 \ublistelem{6.}\bibnobreakspace \bibemph{Melody of thought ---} the thinking of spiritual thoughts can be so perfected as to burst forth in the melodies of Havona.
 \vs p044 1:9 \ublistelem{7.}\bibnobreakspace \bibemph{The music of space ---} by proper attunement the melodies of other spheres can be picked up on the universe broadcast circuits.
 \vs p044 1:10 \pc There are over 100,000 different modes of sound, colour, and energy manipulation, techniques analogous to the human employment of musical instruments. Your ensembles of dancing undoubtedly represent a crude and grotesque attempt of material creatures to approach the celestial harmony of being placement and personality arrangement. The other five forms of morontia melody are unrecognized by the sensory mechanism of material bodies.
-\vs p044 1:11 Harmony, the music of the seven levels of melodious association, is the one universal code of spirit communication. Music, such as Urantia mortals understand, attains its highest expression in the schools of Jerusem, the system headquarters, where semimaterial beings are taught the harmonies of sound. Mortals do not react to the other forms of morontia melody and celestial harmony.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Troy-Bishop/morontia_melody_700x525h.jpg}\caption{Morontia Melody by Troy~R.~Bishop}\end{figure}}
+\vs p044 1:11 Harmony, the music of the seven levels of melodious association, is the one universal code of spirit communication. Music, such as Urantia mortals understand, attains its highest expression in the schools of Jerusem, the system headquarters, where semimaterial beings are taught the harmonies of sound. Mortals do not react to the other forms of morontia melody and celestial harmony.
 \vs p044 1:12 \pc Appreciation of music on Urantia is both physical and spiritual; and your human musicians have done much to elevate musical taste from the barbarous monotony of your early ancestors to the higher levels of sound appreciation. The majority of Urantia mortals react to music so largely with the material muscles and so slightly with the mind and spirit; but there has been a steady improvement in musical appreciation for more than 35,000 years.
 \vs p044 1:13 Tuneful syncopation represents a transition from the musical monotony of primitive man to the expressionful harmony and meaningful melodies of your later\hyp{}day musicians. These earlier types of rhythm stimulate the reaction of the music\hyp{}loving sense without entailing the exertion of the higher intellectual powers of harmony appreciation and thus more generally appeal to immature or spiritually indolent individuals.
 \vs p044 1:14 \pc The best music of Urantia is just a fleeting echo of the magnificent strains heard by the celestial associates of your musicians, who left but snatches of these harmonies of morontia forces on record as the musical melodies of sound harmonics. Spirit\hyp{}morontia music not infrequently employs all seven modes of expression and reproduction, so that the human mind is tremendously handicapped in any attempt to reduce these melodies of the higher spheres to mere notes of musical sound. Such an effort would be something like endeavouring to reproduce the strains of a great orchestra by means of a single musical instrument.
