--- a/tex/p117.tex
+++ b/tex/p117.tex
@@ -5,7 +5,7 @@
 \vs p117 0:3 When an evolving mind becomes attuned to the circuits of cosmic mind, when an evolving universe becomes stabilized after the pattern of the central universe, when an advancing spirit contacts the united ministry of the Master Spirits, when an ascending mortal personality finally attunes to the divine leading of the indwelling Adjuster, then has the actuality of the Supreme become real by one more degree in the universes; then has the divinity of Supremacy advanced one more step toward cosmic realization.
 \vs p117 0:4 The parts and individuals of the grand universe evolve as a reflection of the total evolution of the Supreme, while in turn the Supreme is the synthetic cumulative total of all grand universe evolution. From the mortal viewpoint both are evolutionary and experiential reciprocals.
 \usection{1.\bibnobreakspace Nature of the Supreme Being}
-\vs p117 1:1 The Supreme is the beauty of physical harmony, the truth of intellectual meaning, and the goodness of spiritual value. He is the sweetness of true success and the joy of everlasting achievement. He is the oversoul of the grand universe, the consciousness of the finite cosmos, the completion of finite reality, and the personification of Creator\hyp{}creature experience. Throughout all future eternity God the Supreme will voice the reality of volitional experience in the trinity relationships of Deity.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Troy-Bishop/joy_of_the_supreme_700x525h.jpg}\caption{Joy of the Supreme by Troy~R.~Bishop}\end{figure}}
+\vs p117 1:1 The Supreme is the beauty of physical harmony, the truth of intellectual meaning, and the goodness of spiritual value. He is the sweetness of true success and the joy of everlasting achievement. He is the oversoul of the grand universe, the consciousness of the finite cosmos, the completion of finite reality, and the personification of Creator\hyp{}creature experience. Throughout all future eternity God the Supreme will voice the reality of volitional experience in the trinity relationships of Deity.
 \vs p117 1:2 \pc In the persons of the Supreme Creators the Gods have descended from Paradise to the domains of time and space, there to create and to evolve creatures with Paradise\hyp{}attainment capacity who can ascend thereto in quest of the Father. This universe procession of descending God\hyp{}revealing Creators and ascending God\hyp{}seeking creatures is revelatory of the Deity evolution of the Supreme, in whom both descenders and ascenders achieve mutuality of understanding, the discovery of eternal and universal brotherhood. The Supreme Being thus becomes the finite synthesis of the experience of the perfect\hyp{}Creator cause and the perfecting\hyp{}creature response.
 \vs p117 1:3 The grand universe contains the possibility of, and ever seeks for, complete unification, and this grows out of the fact that this cosmic existence is a consequence of the creative acts and the power mandates of the Paradise Trinity, which is unqualified unity. This very trinitarian unity is expressed in the finite cosmos in the Supreme, whose reality becomes increasingly apparent as the universes attain to the maximum level of Trinity identification.
 \vs p117 1:4 \pc The will of the Creator and the will of the creature are qualitatively different, but they are also experientially akin, for creature and Creator can collaborate in the achievement of universe perfection. Man can work in liaison with God and thereby cocreate an eternal finaliter. God can work even as humanity in the incarnations of his Sons, who thereby achieve the supremacy of creature experience.
