--- a/tex/p132.tex
+++ b/tex/p132.tex
@@ -79,7 +79,7 @@
 \vs p132 6:3 \pc That night, as Gonod listened to the recital of these experiences, he said to Jesus, good\hyp{}naturedly: “I propose to make a scholar or a businessman of my son, and now you start out to make a philosopher or philanthropist of him.” And Jesus smilingly replied: \textcolour{ubdarkred}{“Perhaps we will make him all four; then can he enjoy a fourfold satisfaction in life as his ear for the recognition of human melody will be able to recognize four tones instead of one.”} Then said Gonod: “I perceive that you really are a philosopher. You must write a book for future generations.” And Jesus replied: \textcolour{ubdarkred}{“Not a book --- my mission is to live a life in this generation and for all generations. I --- ”} but he stopped, saying to Ganid, \textcolour{ubdarkred}{“My son, it is time to retire.”}
 \usection{7.\bibnobreakspace Trips about Rome}
 \vs p132 7:1 Jesus, Gonod, and Ganid made five trips away from Rome to points of interest in the surrounding territory. On their visit to the northern Italian lakes Jesus had the long talk with Ganid concerning the impossibility of teaching a man about God if the man does not desire to know God. They had casually met a thoughtless pagan while on their journey up to the lakes, and Ganid was surprised that Jesus did not follow out his usual practice of enlisting the man in conversation which would naturally lead up to the discussion of spiritual questions. When Ganid asked his teacher why he evinced so little interest in this pagan, Jesus answered:
-\vs p132 7:2 \pc \textcolour{ubdarkred}{“Ganid, the man was not hungry for truth. He was not dissatisfied with himself. He was not ready to ask for help, and the eyes of his mind were not open to receive light for the soul. That man was not ripe for the harvest of salvation; he must be allowed more time for the trials and difficulties of life to prepare him for the reception of wisdom and higher learning. Or, if we could have him live with us, we might by our lives show him the Father in heaven, and thus would he become so attracted by our lives as sons of God that he would be constrained to inquire about our Father. You cannot reveal God to those who do not seek for him; you cannot lead unwilling souls into the joys of salvation. Man must become hungry for truth as a result of the experiences of living, or he must desire to know God as the result of contact with the lives of those who are acquainted with the divine Father before another human being can act as the means of leading such a fellow mortal to the Father in heaven. If we know God, our real business on earth is so to live as to permit the Father to reveal himself in our lives, and thus will all God\hyp{}seeking persons see the Father and ask for our help in finding out more about the God who in this manner finds expression in our lives.”}
+\vs p132 7:2 \pc \textcolour{ubdarkred}{“Ganid, the man was not hungry for truth. He was not dissatisfied with himself. He was not ready to ask for help, and the eyes of his mind were not open to receive light for the soul. That man was not ripe for the harvest of salvation; he must be allowed more time for the trials and difficulties of life to prepare him for the reception of wisdom and higher learning. Or, if we could have him live with us, we might by our lives show him the Father in heaven, and thus would he become so attracted by our lives as sons of God that he would be constrained to inquire about our Father. You cannot reveal God to those who do not seek for him; you cannot lead unwilling souls into the joys of salvation. Man must become hungry for truth as a result of the experiences of living, or he must desire to know God as the result of contact with the lives of those who are acquainted with the divine Father before another human being can act as the means of leading such a fellow mortal to the Father in heaven. If we know God, our real business on earth is so to live as to permit the Father to reveal himself in our lives, and thus will all God\hyp{}seeking persons see the Father and ask for our help in finding out more about the God who in this manner finds expression in our lives.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Slawa-Radziszewska-The-Thoughtless-Pagan-525.jpg}\caption{The Thoughtless Pagan by Slawa Radziszewska}\end{figure}}
 \vs p132 7:3 \pc It was on the visit to Switzerland, up in the mountains, that Jesus had an all\hyp{}day talk with both father and son about Buddhism. Many times Ganid had asked Jesus direct questions about Buddha, but he had always received more or less evasive replies. Now, in the presence of the son, the father asked Jesus a direct question about Buddha, and he received a direct reply. Said Gonod: “I would really like to know what you think of Buddha.” And Jesus answered:
 \vs p132 7:4 \textcolour{ubdarkred}{“Your Buddha was much better than your Buddhism. Buddha was a great man, even a prophet to his people, but he was an orphan prophet; by that I mean that he early lost sight of his spiritual Father, the Father in heaven. His experience was tragic. He tried to live and teach as a messenger of God, but without God. Buddha guided his ship of salvation right up to the safe harbour, right up to the entrance to the haven of mortal salvation, and there, because of faulty charts of navigation, the good ship ran aground. There it has rested these many generations, motionless and almost hopelessly stranded. And thereon have many of your people remained all these years. They live within hailing distance of the safe waters of rest, but they refuse to enter because the noble craft of the good Buddha met the misfortune of grounding just outside the harbour. And the Buddhist peoples never will enter this harbour unless they abandon the philosophic craft of their prophet and seize upon his noble spirit. Had your people remained true to the spirit of Buddha, you would have long since entered your haven of spirit tranquillity, soul rest, and assurance of salvation.}
 \vs p132 7:5 \textcolour{ubdarkred}{“You see, Gonod, Buddha knew God in spirit but failed clearly to discover him in mind; the Jews discovered God in mind but largely failed to know him in spirit. Today, the Buddhists flounder about in a philosophy without God, while my people are piteously enslaved to the fear of a God without a saving philosophy of life and liberty. You have a philosophy without a God; the Jews have a God but are largely without a philosophy of living as related thereto. Buddha, failing to envision God as a spirit and as a Father, failed to provide in his teaching the moral energy and the spiritual driving power which a religion must possess if it is to change a race and exalt a nation.”}
