--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -57,8 +57,8 @@
 \vs p163 6:3 And it was at this time, just before partaking of the evening meal, that Jesus experienced one of those rare moments of emotional ecstasy which his followers had occasionally witnessed. He said: \textcolour{ubdarkred}{“I thank you, my Father, Lord of heaven and earth, that, while this wonderful gospel was hidden from the wise and self\hyp{}righteous, the spirit has revealed these spiritual glories to these children of the kingdom. Yes, my Father, it must have been pleasing in your sight to do this, and I rejoice to know that the good news will spread to all the world even after I shall have returned to you and the work which you have given me to perform. I am mightily moved as I realize you are about to deliver all authority into my hands, that only you really know who I am, and that only I really know you, and those to whom I have revealed you. And when I have finished this revelation to my brethren in the flesh, I will continue the revelation to your creatures on high.”}
 \vs p163 6:4 When Jesus had thus spoken to the Father, he turned aside to speak to his apostles and ministers: \textcolour{ubdarkred}{“Blessed are the eyes which see and the ears which hear these things. Let me say to you that many prophets and many of the great men of the past ages have desired to behold what you now see, but it was not granted them. And many generations of the children of light yet to come will, when they hear of these things, envy you who have heard and seen them.”}
 \vs p163 6:5 Then, speaking to all the disciples, he said: \textcolour{ubdarkred}{“You have heard how many cities and villages have received the good news of the kingdom, and how my ministers and teachers have been received by both the Jew and the gentile. And blessed indeed are these communities which have elected to believe the gospel of the kingdom. But woe upon the light\hyp{}rejecting inhabitants of Chorazin, Bethsaida\hyp{}Julias, and Capernaum, the cities which did not well receive these messengers. I declare that, if the mighty works done in these places had been done in Tyre and Sidon, the people of these so\hyp{}called heathen cities would have long since repented in sackcloth and ashes. It shall indeed be more tolerable for Tyre and Sidon in the day of judgment.”}
-\vs p163 6:6 \pc The next day being the Sabbath, Jesus went apart with the 70 and said to them: \textcolour{ubdarkred}{“I did indeed rejoice with you when you came back bearing the good tidings of the reception of the gospel of the kingdom by so many people scattered throughout Galilee, Samaria, and Judea. But why were you so surprisingly elated? Did you not expect that your message would manifest power in its delivery? Did you go forth with so little faith in this gospel that you come back in surprise at its effectiveness? And now, while I would not quench your spirit of rejoicing, I would sternly warn you against the subtleties of pride, spiritual pride. If you could understand the downfall of Lucifer, the iniquitous one, you would solemnly shun all forms of spiritual pride.}
-\vs p163 6:7 \textcolour{ubdarkred}{“You have entered upon this great work of teaching mortal man that he is a son of God. I have shown you the way; go forth to do your duty and be not weary in well doing. To you and to all who shall follow in your steps down through the ages, let me say: I always stand near, and my invitation\hyp{}call is, and ever shall be, Come to me all you who labour and are heavy laden, and I will give you rest. Take my yoke upon you and learn of me, for I am true and loyal, and you shall find spiritual rest for your souls.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Harold_Copping_Come_Unto_Me_525.jpg}\caption{Come Unto Me by Harold~Copping}\end{figure}}
+\vs p163 6:6 \pc The next day being the Sabbath, Jesus went apart with the 70 and said to them: \textcolour{ubdarkred}{“I did indeed rejoice with you when you came back bearing the good tidings of the reception of the gospel of the kingdom by so many people scattered throughout Galilee, Samaria, and Judea. But why were you so surprisingly elated? Did you not expect that your message would manifest power in its delivery? Did you go forth with so little faith in this gospel that you come back in surprise at its effectiveness? And now, while I would not quench your spirit of rejoicing, I would sternly warn you against the subtleties of pride, spiritual pride. If you could understand the downfall of Lucifer, the iniquitous one, you would solemnly shun all forms of spiritual pride.}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Harold_Copping_Come_Unto_Me_525.jpg}\caption{Come Unto Me by Harold~Copping}\end{figure}}
+\vs p163 6:7 \textcolour{ubdarkred}{“You have entered upon this great work of teaching mortal man that he is a son of God. I have shown you the way; go forth to do your duty and be not weary in well doing. To you and to all who shall follow in your steps down through the ages, let me say: I always stand near, and my invitation\hyp{}call is, and ever shall be, Come to me all you who labour and are heavy laden, and I will give you rest. Take my yoke upon you and learn of me, for I am true and loyal, and you shall find spiritual rest for your souls.”}
 \vs p163 6:8 \pc And they found the Master’s words to be true when they put his promises to the test. And since that day countless thousands also have tested and proved the surety of these same promises.
 \usection{7.\bibnobreakspace Preparation for the Last Mission}
 \vs p163 7:1 The next few days were busy times in the Pella camp; preparations for the Perean mission were being completed. Jesus and his associates were about to enter upon their last mission, the three months’ tour of all Perea, which terminated only upon the Master’s entering Jerusalem for his final labours on earth. Throughout this period the headquarters of Jesus and the 12 apostles was maintained here at the Pella camp.
