--- a/tex/p172.tex
+++ b/tex/p172.tex
@@ -9,7 +9,7 @@
 \vs p172 1:3 Jesus talked with Simon about Joshua of old, whose namesake he was, and recited how Joshua and the Israelites had come up to Jerusalem through Jericho. In commenting on the legend of the walls of Jericho falling down, Jesus said: \textcolour{ubdarkred}{“I am not concerned with such walls of brick and stone; but I would cause the walls of prejudice, self\hyp{}righteousness, and hate to crumble before this preaching of the Father’s love for all men.”}
 \vs p172 1:4 The banquet went along in a very cheerful and normal manner except that all the apostles were unusually sober. Jesus was exceptionally cheerful and had been playing with the children up to the time of coming to the table.
 \vs p172 1:5 \pc Nothing out of the ordinary happened until near the close of the feasting when Mary the sister of Lazarus stepped forward from among the group of women onlookers and, going up to where Jesus reclined as the guest of honour, proceeded to open a large alabaster cruse of very rare and costly ointment; and after anointing the Master’s head, she began to pour it upon his feet as she took down her hair and wiped them with it. The whole house became filled with the odour of the ointment, and everybody present was amazed at what Mary had done. Lazarus said nothing, but when some of the people murmured, showing indignation that so costly an ointment should be thus used, Judas Iscariot stepped over to where Andrew reclined and said: “Why was this ointment not sold and the money bestowed to feed the poor? You should speak to the Master that he rebuke such waste.”
-\vs p172 1:6 Jesus, knowing what they thought and hearing what they said, put his hand upon Mary’s head as she knelt by his side and, with a kindly expression upon his face, said: \textcolour{ubdarkred}{“Let her alone, every one of you. Why do you trouble her about this, seeing that she has done a good thing in her heart? To you who murmur and say that this ointment should have been sold and the money given to the poor, let me say that you have the poor always with you so that you may minister to them at any time it seems good to you; but I shall not always be with you; I go soon to my Father. This woman has long saved this ointment for my body at its burial, and now that it has seemed good to her to make this anointing in anticipation of my death, she shall not be denied such satisfaction. In the doing of this, Mary has reproved all of you in that by this act she evinces faith in what I have said about my death and ascension to my Father in heaven. This woman shall not be reproved for that which she has this night done; rather do I say to you that in the ages to come, wherever this gospel shall be preached throughout the whole world, what she has done will be spoken of in memory of her.”}
+\vs p172 1:6 Jesus, knowing what they thought and hearing what they said, put his hand upon Mary’s head as she knelt by his side and, with a kindly expression upon his face, said: \textcolour{ubdarkred}{“Let her alone, every one of you. Why do you trouble her about this, seeing that she has done a good thing in her heart? To you who murmur and say that this ointment should have been sold and the money given to the poor, let me say that you have the poor always with you so that you may minister to them at any time it seems good to you; but I shall not always be with you; I go soon to my Father. This woman has long saved this ointment for my body at its burial, and now that it has seemed good to her to make this anointing in anticipation of my death, she shall not be denied such satisfaction. In the doing of this, Mary has reproved all of you in that by this act she evinces faith in what I have said about my death and ascension to my Father in heaven. This woman shall not be reproved for that which she has this night done; rather do I say to you that in the ages to come, wherever this gospel shall be preached throughout the whole world, what she has done will be spoken of in memory of her.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Stephen-Sawyer-Slawa-Radziszewska-The-Turning-Point-525.jpg}\caption{The Turning Point by Stephen Sawyer and Slawa Radziszewska}\end{figure}}
 \vs p172 1:7 It was because of this rebuke, which he took as a personal reproof, that Judas Iscariot finally made up his mind to seek revenge for his hurt feelings. Many times had he entertained such ideas subconsciously, but now he dared to think such wicked thoughts in his open and conscious mind. And many others encouraged him in this attitude since the cost of this ointment was a sum equal to the earnings of one man for one year --- enough to provide bread for 5,000 persons. But Mary loved Jesus; she had provided this precious ointment with which to embalm his body in death, for she believed his words when he forewarned them that he must die, and it was not to be denied her if she changed her mind and chose to bestow this offering upon the Master while he yet lived.
 \vs p172 1:8 Both Lazarus and Martha knew that Mary had long saved the money wherewith to buy this cruse of spikenard, and they heartily approved of her doing as her heart desired in such a matter, for they were well\hyp{}to\hyp{}do and could easily afford to make such an offering.
 \vs p172 1:9 When the chief priests heard of this dinner in Bethany for Jesus and Lazarus, they began to take counsel among themselves as to what should be done with Lazarus. And presently they decided that Lazarus must also die. They rightly concluded that it would be useless to put Jesus to death if they permitted Lazarus, whom he had raised from the dead, to live.
