--- a/tex/p192.tex
+++ b/tex/p192.tex
@@ -33,7 +33,7 @@
 \vs p192 2:13 \pc Then he walked and talked with the Alpheus twins, James and Judas, and speaking to both of them, he asked, \textcolour{ubdarkred}{“James and Judas, do you believe in me?”} And when they both answered, “Yes, Master, we do believe,” he said: \textcolour{ubdarkred}{“I will soon leave you. You see that I have already left you in the flesh. I tarry only a short time in this form before I go to my Father. You believe in me --- you are my apostles, and you always will be. Go on believing and remembering your association with me, when I am gone, and after you have, perchance, returned to the work you used to do before you came to live with me. Never allow a change in your outward work to influence your allegiance. Have faith in God to the end of your days on earth. Never forget that, when you are a faith son of God, all upright work of the realm is sacred. Nothing which a son of God does can be common. Do your work, therefore, from this time on, as for God. And when you are through on this world, I have other and better worlds where you shall likewise work for me. And in all of this work, on this world and on other worlds, I will work with you, and my spirit shall dwell within you.”}
 \vs p192 2:14 \pc It was almost 10:00 when Jesus returned from his visit with the Alpheus twins, and as he left the apostles, he said: \textcolour{ubdarkred}{“Farewell, until I meet you all on the mount of your ordination tomorrow at noontime.”} When he had thus spoken, he vanished from their sight.
 \usection{3.\bibnobreakspace On the Mount of Ordination}
-\vs p192 3:1 At noon on Saturday, April 22, the 11 apostles assembled by appointment on the hill near Capernaum, and Jesus appeared among them. This meeting occurred on the very mount where the Master had set them apart as his apostles and as ambassadors of the Father’s kingdom on earth. And this was the Master’s 14\ts{th} morontia manifestation.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Harold_Copping_Jesus_raised_from_the_dead_525.jpg}\caption{Jesus raised from the Dead by Harold~Copping}\end{figure}}
+\vs p192 3:1 At noon on Saturday, April 22, the 11 apostles assembled by appointment on the hill near Capernaum, and Jesus appeared among them. This meeting occurred on the very mount where the Master had set them apart as his apostles and as ambassadors of the Father’s kingdom on earth. And this was the Master’s 14\ts{th} morontia manifestation.
 \vs p192 3:2 At this time the 11 apostles knelt in a circle about the Master and heard him repeat the charges and saw him re\hyp{}enact the ordination scene even as when they were first set apart for the special work of the kingdom. And all of this was to them as a memory of their former consecration to the Father’s service, except the Master’s prayer. When the Master --- the morontia Jesus --- now prayed, it was in tones of majesty and with words of power such as the apostles had never before heard. Their Master now spoke with the rulers of the universes as one who, in his own universe, had had all power and authority committed to his hand. And these 11 men never forgot this experience of the morontia rededication to the former pledges of ambassadorship. The Master spent just one hour on this mount with his ambassadors, and when he had taken an affectionate farewell of them, he vanished from their sight.
 \vs p192 3:3 \pc And no one saw Jesus for a full week. The apostles really had no idea what to do, not knowing whether the Master had gone to the Father. In this state of uncertainty they tarried at Bethsaida. They were afraid to go fishing lest he come to visit them and they miss seeing him. During this entire week Jesus was occupied with the morontia creatures on earth and with the affairs of the morontia transition which he was experiencing on this world.
 \usection{4.\bibnobreakspace The Lakeside Gathering}
