--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -52,17 +52,17 @@
 \vs p122 7:7 The inn was overcrowded, and Joseph accordingly sought lodgings with distant relatives, but every room in Bethlehem was filled to overflowing. On returning to the courtyard of the inn, he was informed that the caravan stables, hewn out of the side of the rock and situated just below the inn, had been cleared of animals and cleaned up for the reception of lodgers. Leaving the donkey in the courtyard, Joseph shouldered their bags of clothing and provisions and with Mary descended the stone steps to their lodgings below. They found themselves located in what had been a grain storage room to the front of the stalls and mangers. Tent curtains had been hung, and they counted themselves fortunate to have such comfortable quarters.
 \vs p122 7:8 Joseph had thought to go out at once and enrol, but Mary was weary; she was considerably distressed and besought him to remain by her side, which he did.
 \usection{8.\bibnobreakspace The Birth of Jesus}
-\vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near\hyp{}by manger.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Son-of-Man-Son-of-God.jpg}\caption{Son of Man, Son of God by Jeremy~Winborg}\end{figure}}
+\vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near\hyp{}by manger.
 \vs p122 8:2 In just the same manner as all babies before that day and since have come into the world, the promised child was born; and on the eighth day, according to the Jewish practice, he was circumcised and formally named Joshua (Jesus).
-\vs p122 8:3 The next day after the birth of Jesus, Joseph made his enrolment. Meeting a man they had talked with two nights previously at Jericho, Joseph was taken by him to a well\hyp{}to\hyp{}do friend who had a room at the inn, and who said he would gladly exchange quarters with the Nazareth couple. That afternoon they moved up to the inn, where they lived for almost three weeks until they found lodgings in the home of a distant relative of Joseph.
+\vs p122 8:3 The next day after the birth of Jesus, Joseph made his enrolment. Meeting a man they had talked with two nights previously at Jericho, Joseph was taken by him to a well\hyp{}to\hyp{}do friend who had a room at the inn, and who said he would gladly exchange quarters with the Nazareth couple. That afternoon they moved up to the inn, where they lived for almost three weeks until they found lodgings in the home of a distant relative of Joseph.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Son-of-Man-Son-of-God.jpg}\caption{Son of Man, Son of God by Jeremy~Winborg}\end{figure}}
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
 \vs p122 8:5 \pc At the noontide birth of Jesus the seraphim of Urantia, assembled under their directors, did sing anthems of glory over the Bethlehem manger, but these utterances of praise were not heard by human ears. No shepherds nor any other mortal creatures came to pay homage to the babe of Bethlehem until the day of the arrival of certain priests from Ur, who were sent down from Jerusalem by Zacharias.
 \vs p122 8:6 These priests from Mesopotamia had been told sometime before by a strange religious teacher of their country that he had had a dream in which he was informed that “the light of life” was about to appear on earth as a babe and among the Jews. And thither went these three teachers looking for this “light of life.” After many weeks of futile search in Jerusalem, they were about to return to Ur when Zacharias met them and disclosed his belief that Jesus was the object of their quest and sent them on to Bethlehem, where they found the babe and left their gifts with Mary, his earth mother. The babe was almost three weeks old at the time of their visit.
 \vs p122 8:7 These wise men saw no star to guide them to Bethlehem. The beautiful legend of the star of Bethlehem originated in this way: Jesus was born August 21 at noon, 7\,B.C. On May 29, 7\,B.C., there occurred an extraordinary conjunction of Jupiter and Saturn in the constellation of Pisces\fnst{\textbf{conjunction of Jupiter and Saturn in the constellation of Pisces}, Indeed, there was such a triple conjunction in 7\,B.C. and this fact was known back in 1614 to Johannes Kepler, who was the first scientist to link the ``Star of Bethlehem'' to this astronomical event. I have calculated (using the program \bibemph{Stellarium} under Linux) the gap between the planets to be around one degree. The apparent diameter of the Moon is just over half a degree, so the planets were two Moon's diameters apart.}. And it is a remarkable astronomic fact that similar conjunctions occurred on September 29 and December 5 of the same year. Upon the basis of these extraordinary but wholly natural events the well\hyp{}meaning zealots of the succeeding generation constructed the appealing legend of the star of Bethlehem and the adoring Magi led thereby to the manger, where they beheld and worshipped the newborn babe. Oriental and near\hyp{}Oriental minds delight in fairy stories, and they are continually spinning such beautiful myths about the lives of their religious leaders and political heroes. In the absence of printing, when most human knowledge was passed by word of mouth from one generation to another, it was very easy for myths to become traditions and for traditions eventually to become accepted as facts.
 \usection{9.\bibnobreakspace The Presentation in the Temple}
-\vs p122 9:1 Moses had taught the Jews that every first\hyp{}born son belonged to the Lord, and that, in lieu of his sacrifice as was the custom among the heathen nations, such a son might live provided his parents would redeem him by the payment of five shekels to any authorized priest. There was also a Mosaic ordinance which directed that a mother, after the passing of a certain period of time, should present herself (or have someone make the proper sacrifice for her) at the temple for purification. It was customary to perform both of these ceremonies at the same time. Accordingly, Joseph and Mary went up to the temple at Jerusalem in person to present Jesus to the priests and effect his redemption and also to make the proper sacrifice to ensure Mary’s ceremonial purification from the alleged uncleanness of childbirth.
+\vs p122 9:1 Moses had taught the Jews that every first\hyp{}born son belonged to the Lord, and that, in lieu of his sacrifice as was the custom among the heathen nations, such a son might live provided his parents would redeem him by the payment of five shekels to any authorized priest. There was also a Mosaic ordinance which directed that a mother, after the passing of a certain period of time, should present herself (or have someone make the proper sacrifice for her) at the temple for purification. It was customary to perform both of these ceremonies at the same time. Accordingly, Joseph and Mary went up to the temple at Jerusalem in person to present Jesus to the priests and effect his redemption and also to make the proper sacrifice to ensure Mary’s ceremonial purification from the alleged uncleanness of childbirth.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/William_Hole_Presentation_In_The_Temple_525.jpg}\caption{Presentation In The Temple by William~Hole}\end{figure}}
 \vs p122 9:2 \pc There lingered constantly about the courts of the temple two remarkable characters, Simeon a singer and Anna a poetess. Simeon was a Judean, but Anna was a Galilean. This couple were frequently in each other’s company, and both were intimates of the priest Zacharias, who had confided the secret of John and Jesus to them. Both Simeon and Anna longed for the coming of the Messiah, and their confidence in Zacharias led them to believe that Jesus was the expected deliverer of the Jewish people.
-\vs p122 9:3 Zacharias knew the day Joseph and Mary were expected to appear at the temple with Jesus, and he had prearranged with Simeon and Anna to indicate, by the salute of his upraised hand, which one in the procession of first\hyp{}born children was Jesus.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/William_Hole_Presentation_In_The_Temple_525.jpg}\caption{Presentation In The Temple by William~Hole}\end{figure}}
+\vs p122 9:3 Zacharias knew the day Joseph and Mary were expected to appear at the temple with Jesus, and he had prearranged with Simeon and Anna to indicate, by the salute of his upraised hand, which one in the procession of first\hyp{}born children was Jesus.
 \vs p122 9:4 For this occasion Anna had written a poem which Simeon proceeded to sing, much to the astonishment of Joseph, Mary, and all who were assembled in the temple courts. And this was their hymn of the redemption of the first\hyp{}born son:
 \begin{quote}
 \vs p122 9:5 Blessed be the Lord, the God of Israel,
