--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -85,8 +85,8 @@
 \vs p134 8:2 The first day, after he had left Tiglath, Jesus had ascended the mountain only a short way when he paused to pray. Among other things he asked his Father to send back the guardian seraphim to \textcolour{ubdarkred}{“be with Tiglath.”} He requested that he be permitted to go up to his last struggle with the realities of mortal existence alone. And his request was granted. He went into the great test with only his indwelling Adjuster to guide and sustain him.
 \vs p134 8:3 \pc Jesus ate frugally while on the mountain; he abstained from all food only a day or two at a time. The superhuman beings who confronted him on this mountain, and with whom he wrestled in spirit, and whom he defeated in power, were \bibemph{real;} they were his archenemies in the system of Satania; they were not phantasms of the imagination evolved out of the intellectual vagaries of a weakened and starving mortal who could not distinguish reality from the visions of a disordered mind.
 \vs p134 8:4 Jesus spent the last three weeks of August and the first three weeks of September on Mount Hermon. During these weeks he finished the mortal task of achieving the circles of mind\hyp{}understanding and personality\hyp{}control. Throughout this period of communion with his heavenly Father the indwelling Adjuster also completed the assigned services. The mortal goal of this earth creature was there attained. Only the final phase of mind and Adjuster attunement remained to be consummated.
-\vs p134 8:5 After more than five weeks of unbroken communion with his Paradise Father, Jesus became absolutely assured of his nature and of the certainty of his triumph over the material levels of time\hyp{}space personality manifestation. He fully believed in, and did not hesitate to assert, the ascendancy of his divine nature over his human nature.
-\vs p134 8:6 \pc Near the end of the mountain sojourn Jesus asked his Father if he might be permitted to hold conference with his Satania enemies as the Son of Man, as Joshua ben Joseph. This request was granted. During the last week on Mount Hermon the great temptation, the universe trial, occurred. Satan (representing Lucifer) and the rebellious Planetary Prince, Caligastia, were present with Jesus and were made fully visible to him. And this “temptation,” this final trial of human loyalty in the face of the misrepresentations of rebel personalities, had not to do with food, temple pinnacles, or presumptuous acts. It had not to do with the kingdoms of this world but with the sovereignty of a mighty and glorious universe. The symbolism of your records was intended for the backward ages of the world’s childlike thought. And subsequent generations should understand what a great struggle the Son of Man passed through that eventful day on Mount Hermon.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Not_by_Bread_Alone.jpg}\caption{Not by Bread Alone by Michael~Dudash}\end{figure}}
+\vs p134 8:5 After more than five weeks of unbroken communion with his Paradise Father, Jesus became absolutely assured of his nature and of the certainty of his triumph over the material levels of time\hyp{}space personality manifestation. He fully believed in, and did not hesitate to assert, the ascendancy of his divine nature over his human nature.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Not_by_Bread_Alone.jpg}\caption{Not by Bread Alone by Michael~Dudash}\end{figure}}
+\vs p134 8:6 \pc Near the end of the mountain sojourn Jesus asked his Father if he might be permitted to hold conference with his Satania enemies as the Son of Man, as Joshua ben Joseph. This request was granted. During the last week on Mount Hermon the great temptation, the universe trial, occurred. Satan (representing Lucifer) and the rebellious Planetary Prince, Caligastia, were present with Jesus and were made fully visible to him. And this “temptation,” this final trial of human loyalty in the face of the misrepresentations of rebel personalities, had not to do with food, temple pinnacles, or presumptuous acts. It had not to do with the kingdoms of this world but with the sovereignty of a mighty and glorious universe. The symbolism of your records was intended for the backward ages of the world’s childlike thought. And subsequent generations should understand what a great struggle the Son of Man passed through that eventful day on Mount Hermon.
 \vs p134 8:7 To the many proposals and counterproposals of the emissaries of Lucifer, Jesus only made reply: \textcolour{ubdarkred}{“May the will of my Paradise Father prevail, and you, my rebellious son, may the Ancients of Days judge you divinely. I am your Creator\hyp{}father; I can hardly judge you justly, and my mercy you have already spurned. I commit you to the adjudication of the Judges of a greater universe.”}
 \vs p134 8:8 To all the Lucifer\hyp{}suggested compromises and makeshifts, to all such specious proposals about the incarnation bestowal, Jesus only made reply, \textcolour{ubdarkred}{“The will of my Father in Paradise be done.”} And when the trying ordeal was finished, the detached guardian seraphim returned to Jesus’ side and ministered to him.
 \vs p134 8:9 \pc On an afternoon in late summer, amid the trees and in the silence of nature, Michael of Nebadon won the unquestioned sovereignty of his universe. On that day he completed the task set for Creator Sons to live to the full the incarnated life in the likeness of mortal flesh on the evolutionary worlds of time and space. The universe announcement of this momentous achievement was not made until the day of his baptism, months afterwards, but it all really took place that day on the mountain. And when Jesus came down from his sojourn on Mount Hermon, the Lucifer rebellion in Satania and the Caligastia secession on Urantia were virtually settled. Jesus had paid the last price required of him to attain the sovereignty of his universe, which in itself regulates the status of all rebels and determines that all such future upheavals (if they ever occur) may be dealt with summarily and effectively. Accordingly, it may be seen that the so\hyp{}called “great temptation” of Jesus took place sometime before his baptism and not just after that event.\fnc{\ldots{}the so-called “great temptation” of Jesus took place \bibtextul{some time} before his baptism\ldots{} \bibexpl{Closed form “sometime”. See note for \bibref[60:3.20]{p0607 3:20}. “Sometime before Michael’s death in the flesh the fallen Lucifer’s associate,\ldots{}”}}
