--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -8,6 +8,7 @@
 \begin{center}
 {\titlefont\bibtocsuperheadfont The Titles of the Papers}
 \bibtocfont
+\ifvoli
 \upartheader{1}
 \upapertitleheader{Paper}{Author}{Page}
 \upapertitle{0}{Foreword}{Divine Counsellor}{p0}
@@ -44,6 +45,8 @@
 \upapertitle{30}{Personalities of the Grand Universe}{Mighty Messenger}{p30}
 \upapertitle{31}{The Corps of the Finality}{\parbox[t]{0.3\linewidth}{Divine Counsellor and One Without Name and Number}}{p31}
 \upartheader{2}
+\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{32}{The Evolution of Local Universes}{Mighty Messenger}{p32}
 \upapertitle{33}{Administration of the Local Universe}{Chief of Archangels}{p33}
 \upapertitle{34}{The Local Universe Mother Spirit}{Mighty Messenger}{p34}
@@ -65,8 +68,8 @@
 \upapertitle{50}{The Planetary Princes}{Secondary Lanonandek}{p50}
 \upapertitle{51}{The Planetary Adams}{Secondary Lanonandek}{p51}
 \upapertitle{52}{Planetary Mortal Epochs}{Mighty Messenger}{p52}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{53}{The Lucifer Rebellion}{\parbox[t]{0.3\linewidth}{Manovandet Melchizedek}}{p53}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{54}{Problems of the Lucifer Rebellion}{Mighty Messenger}{p54}
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
@@ -77,8 +80,12 @@
 \upapertitle{60}{Urantia During the Early Land-Life Era}{Life Carrier}{p60}
 \upapertitle{61}{The Mammalian Era on Urantia}{Life Carrier}{p61}
 \upapertitle{62}{The Dawn Races of Early Man}{Life Carrier}{p62}
+\fi
+\ifvolii
+\ifmultivol\tunemarkup{pgcrownq}{\upartheadercont{2}\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{63}{The First Human Family}{Life Carrier}{p63}
 \upapertitle{64}{The Evolutionary Races of Colour}{Life Carrier}{p64}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{65}{The Overcontrol of Evolution}{Life Carrier}{p65}
 \upapertitle{66}{The Planetary Prince of Urantia}{Melchizedek}{p66}
 \upapertitle{67}{The Planetary Rebellion}{Melchizedek}{p67}
@@ -94,8 +101,8 @@
 \upapertitle{77}{The Midway Creatures}{Archangel}{p77}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{80}{Andite Expansion in the Occident}{Archangel}{p80}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{81}{Development of Modern Civilization}{Archangel}{p81}
 \upapertitle{82}{The Evolution of Marriage}{Chief of Seraphim}{p82}
 \upapertitle{83}{The Marriage Institution}{Chief of Seraphim}{p83}
@@ -112,11 +119,13 @@
 \upapertitle{94}{The Melchizedek Teachings in the Orient}{Melchizedek}{p94}
 \upapertitle{95}{The Melchizedek Teachings in the Levant}{Melchizedek}{p95}
 \upapertitle{96}{Yahweh — God of the Hebrews}{Melchizedek}{p96}
+\ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{97}{Evolution of the God Concept among the Hebrews}{Melchizedek}{p97}
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \upapertitle{103}{The Reality of Religious Experience}{Melchizedek}{p103}
 \upapertitle{104}{Growth of the Trinity Concept}{Melchizedek}{p104}
@@ -125,8 +134,8 @@
 \upapertitle{107}{Origin and Nature of Thought Adjusters}{Solitary Messenger}{p107}
 \upapertitle{108}{Mission and Ministry of Thought Adjusters}{Solitary Messenger}{p108}
 \upapertitle{109}{Relation of Adjusters to Universe Creatures}{Solitary Messenger}{p109}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{110}{Relation of Adjusters to Individual Mortals}{Solitary Messenger}{p110}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{111}{The Adjuster and the Soul}{Solitary Messenger}{p111}
 \upapertitle{112}{Personality Survival}{Solitary Messenger}{p112}
 \upapertitle{113}{Seraphic Guardians of Destiny}{Chief of Seraphim}{p113}
@@ -146,6 +155,9 @@
 \upapertitle{126}{The Two Crucial Years}{Midwayer Commission}{p126}
 \upapertitle{127}{The Adolescent Years}{Midwayer Commission}{p127}
 \upapertitle{128}{Jesus’ Early Manhood}{Midwayer Commission}{p128}
+\fi
+\ifvoliii
+\ifmultivol\tunemarkup{pgcrownq}{\upartheadercont{3}\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{129}{The Later Adult Life of Jesus}{Midwayer Commission}{p129}
 \upapertitle{130}{On the Way to Rome}{Midwayer Commission}{p130}
 \upapertitle{131}{The World’s Religions}{Midwayer Commission}{p131}
@@ -153,9 +165,10 @@
 \upapertitle{133}{The Return from Rome}{Midwayer Commission}{p133}
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
 \upapertitle{139}{The Twelve Apostles}{Midwayer Commission}{p139}
 \upapertitle{140}{The Ordination of the Twelve}{Midwayer Commission}{p140}
@@ -181,17 +194,19 @@
 \upapertitle{160}{Rodan of Alexandria}{Midwayer Commission}{p160}
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
 \upapertitle{162}{At the Feast of Tabernacles}{Midwayer Commission}{p162}
+\ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{163}{Ordination of the Seventy at Magadan}{Midwayer Commission}{p163}
 \upapertitle{164}{At the Feast of Dedication}{Midwayer Commission}{p164}
 \upapertitle{165}{The Perean Mission Begins}{Midwayer Commission}{p165}
 \upapertitle{166}{Last Visit to Northern Perea}{Midwayer Commission}{p166}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{168}{The Resurrection of Lazarus}{Midwayer Commission}{p168}
 \upapertitle{169}{Last Teaching at Pella}{Midwayer Commission}{p169}
 \upapertitle{170}{The Kingdom of Heaven}{Midwayer Commission}{p170}
 \upapertitle{171}{On the Way to Jerusalem}{Midwayer Commission}{p171}
 \upapertitle{172}{Going into Jerusalem}{Midwayer Commission}{p172}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{173}{Monday in Jerusalem}{Midwayer Commission}{p173}
 \upapertitle{174}{Tuesday Morning in the Temple}{Midwayer Commission}{p174}
 \upapertitle{175}{The Last Temple Discourse}{Midwayer Commission}{p175}
@@ -216,4 +231,5 @@
 \upapertitle{194}{Bestowal of the Spirit of Truth}{Midwayer Commission}{p194}
 \upapertitle{195}{After Pentecost}{Midwayer Commission}{p195}
 \upapertitle{196}{The Faith of Jesus}{Midwayer Commission}{p196}
+\fi
 \end{center}
