--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -14,19 +14,21 @@
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\include{tex/paper-titles}}
+\tunemarkup{pgcrownq}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
 \tunemarkup{introinclude}{\include{tex/intro}}
+\ifvoli
 \include{tex/p000}
-\include{tex/p001}
+\include{tex/p001}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p002}
 \include{tex/p003}
 \include{tex/p004}
 \include{tex/p005}
 \include{tex/p006}
-\include{tex/p007}
+\include{tex/p007}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p008}
 \include{tex/p009}
-\include{tex/p010}
+\include{tex/p010}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p011}
 \include{tex/p012}
 \include{tex/p013}
@@ -35,19 +37,19 @@
 \include{tex/p016}
 \include{tex/p017}
 \include{tex/p018}
-\include{tex/p019}
+\include{tex/p019}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p020}
 \include{tex/p021}
 \include{tex/p022}
-\include{tex/p023}
+\include{tex/p023}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p024}
 \include{tex/p025}
 \include{tex/p026}
 \include{tex/p027}
-\include{tex/p028}
+\include{tex/p028}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p029}
 \include{tex/p030}
-\include{tex/p031}
+\include{tex/p031}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p032}
 \include{tex/p033}
 \include{tex/p034}
@@ -55,7 +57,7 @@
 \include{tex/p036}
 \include{tex/p037}
 \include{tex/p038}
-\include{tex/p039}
+\include{tex/p039}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p040}
 \include{tex/p041}
 \include{tex/p042}
@@ -64,21 +66,24 @@
 \include{tex/p045}
 \include{tex/p046}
 \include{tex/p047}
-\include{tex/p048}
+\include{tex/p048}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p049}
 \include{tex/p050}
-\include{tex/p051}
+\include{tex/p051}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p052}
 \include{tex/p053}
 \include{tex/p054}
 \include{tex/p055}
-\include{tex/p056}
+\include{tex/p056}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p057}
 \include{tex/p058}
 \include{tex/p059}
 \include{tex/p060}
 \include{tex/p061}
 \include{tex/p062}
+\fi
+\ifvolii
+\ifmultivol\newpage\fi
 \include{tex/p063}
 \include{tex/p064}
 \include{tex/p065}
@@ -99,20 +104,20 @@
 \include{tex/p080}
 \include{tex/p081}
 \include{tex/p082}
-\include{tex/p083}
+\include{tex/p083}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p084}
-\include{tex/p085}
+\include{tex/p085}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p086}
 \include{tex/p087}
 \include{tex/p088}
-\include{tex/p089}
+\include{tex/p089}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p090}
 \include{tex/p091}
 \include{tex/p092}
 \include{tex/p093}
 \include{tex/p094}
 \include{tex/p095}
-\include{tex/p096}
+\include{tex/p096}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p097}
 \include{tex/p098}
 \include{tex/p099}
@@ -135,8 +140,8 @@
 \include{tex/p116}
 \include{tex/p117}
 \include{tex/p118}
-\include{tex/p119}
-\include{tex/p120}
+\include{tex/p119}\tunemarkup{pgcrownq}{\newpage}
+\include{tex/p120}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p121}
 \include{tex/p122}
 \include{tex/p123}
@@ -145,23 +150,26 @@
 \include{tex/p126}
 \include{tex/p127}
 \include{tex/p128}
+\fi
+\ifvoliii
+\ifmultivol\newpage\fi
 \include{tex/p129}
 \include{tex/p130}
 \include{tex/p131}
 \include{tex/p132}
 \include{tex/p133}
-\include{tex/p134}
+\include{tex/p134}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p135}
 \include{tex/p136}
 \include{tex/p137}
 \include{tex/p138}
 \include{tex/p139}
-\include{tex/p140}
+\include{tex/p140}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p141}
 \include{tex/p142}
 \include{tex/p143}
 \include{tex/p144}
-\include{tex/p145}
+\include{tex/p145}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p146}
 \include{tex/p147}
 \include{tex/p148}
@@ -174,9 +182,9 @@
 \include{tex/p155}
 \include{tex/p156}
 \include{tex/p157}
-\include{tex/p158}
-\include{tex/p159}
-\include{tex/p160}
+\include{tex/p158}\tunemarkup{pgcrownq}{\newpage}
+\include{tex/p159}\tunemarkup{pgcrownq}{\newpage}
+\include{tex/p160}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p161}
 \include{tex/p162}
 \include{tex/p163}
@@ -184,7 +192,7 @@
 \include{tex/p165}
 \include{tex/p166}
 \include{tex/p167}
-\include{tex/p168}
+\include{tex/p168}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p169}
 \include{tex/p170}
 \include{tex/p171}
@@ -198,11 +206,11 @@
 \include{tex/p179}
 \include{tex/p180}
 \include{tex/p181}
-\include{tex/p182}
+\include{tex/p182}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p183}
 \include{tex/p184}
 \include{tex/p185}
-\include{tex/p186}
+\include{tex/p186}\tunemarkup{pgcrownq}{\newpage}
 \include{tex/p187}
 \include{tex/p188}
 \include{tex/p189}
@@ -213,5 +221,6 @@
 \include{tex/p194}
 \include{tex/p195}
 \include{tex/p196}
+\fi
 \tunemarkuptwo{noquiz}{}{\include{tex/quiz}}
 \end{document}
