Tidy up Kobo Mini font sizes etc.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -885,14 +885,15 @@
 \newcommand{\txtw}{0.81\linewidth}
 
 \tunemarkup{pgkobomini}{%
-\setcounter{DefaultLines}{2}
+%\setcounter{DefaultLines}{2}
+\renewcommand{\authorfont}{\fontsize{12}{9}\bfseries\itshape}%
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\normalsize\bfseries}
-\newcommand{\bibpapertitlefont}{\large\bfseries}
+\newcommand{\bibpaperfont}{\large\bfseries}
+\newcommand{\bibpapertitlefont}{\Large\bfseries}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
@@ -903,12 +904,12 @@
 \renewcommand{\bibfnvssize}{\headerfont\large}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{16}{18}\itshape}
-\newcommand{\parttitlefontsize}{\Large}
-\renewcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
-\renewcommand{\urantiamainfontsize}{19/21}
+\newcommand{\parttitlefontsize}{\LARGE}
+\renewcommand{\bibbookend}{\fontsize{19.5}{21}\selectfont}
+\renewcommand{\urantiamainfontsize}{19.5/21}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
-\newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
+\newcommand{\bibsectitlefont}{\fontsize{9}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{16}{18}\selectfont}
 \setlength{\minitocafterskip}{-1.2ex}
 }
